--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     </header>
     <div class="container">
         <div class="search-form">
-            <form method="get">
+            <form method="get" action="{% url 'home' %}">
                 <div class="search-container">
                     <div class="search-field">
                         <label for="first_name">Full Name</label>
